# MG-CFD-app-OP2

./: .gitignore  Makefile  README.md  cleanOp2.sh  const.h  cpx_input.cfg  euler3d.cpp  flux.h  global.h  io.h  mg_files.input  papi_funcs.h  perf_funcs.h  translate2op2.sh
cuda/: _hybkernels.cu  _kernels.cu  calc_rms_kernel_kernel.cu  calculate_cell_volumes_kernel.cu  calculate_dt_kernel_kernel.cu  compute_bnd_node_flux_kernel_kernel.cu  compute_flux_edge_kernel_kernel.cu  compute_step_factor_kernel_kernel.cu  copy_double_kernel_kernel.cu  count_bad_vals_kernel.cu  count_non_zeros_kernel.cu  dampen_ewt_kernel.cu  down_kernel_kernel.cu  down_v2_kernel_kernel.cu  down_v2_kernel_post_kernel.cu  down_v2_kernel_pre_kernel.cu  get_min_dt_kernel_kernel.cu  identify_differences_kernel.cu  indirect_rw_kernel_kernel.cu  initialize_variables_kernel_kernel.cu  residual_kernel_kernel.cu  test_negate_kernel_kernel.cu  test_read_kernel_kernel.cu  test_write_kernel_kernel.cu  time_step_kernel_kernel.cu  unstructured_stream_kernel_kernel.cu  up_kernel_kernel.cu  up_post_kernel_kernel.cu  up_pre_kernel_kernel.cu  zero_1d_array_kernel_kernel.cu  zero_5d_array_kernel_kernel.cu
cup_cfd_files/: cupcfd.json
dolfinx/: CMakeLists.txt  Structural.py  Structural.ufl  TransientThermal.py  TransientThermal.ufl  main.cpp  problem_specification.py
dolfinx/old/: CMakeLists.txt
dolfinx/refine/: main.cpp
dolfinx/refine_basic/: CMakeLists.txt  main.cpp
openacc/: _acckernels.c  calc_rms_kernel_acckernel.c  calculate_cell_volumes_acckernel.c  calculate_dt_kernel_acckernel.c  compute_bnd_node_flux_kernel_acckernel.c  compute_flux_edge_kernel_acckernel.c  compute_step_factor_kernel_acckernel.c  copy_double_kernel_acckernel.c  count_bad_vals_acckernel.c  count_non_zeros_acckernel.c  dampen_ewt_acckernel.c  down_kernel_acckernel.c  down_v2_kernel_acckernel.c  down_v2_kernel_post_acckernel.c  down_v2_kernel_pre_acckernel.c  get_min_dt_kernel_acckernel.c  identify_differences_acckernel.c  indirect_rw_kernel_acckernel.c  initialize_variables_kernel_acckernel.c  residual_kernel_acckernel.c  time_step_kernel_acckernel.c  unstructured_stream_kernel_acckernel.c  up_kernel_acckernel.c  up_post_kernel_acckernel.c  up_pre_kernel_acckernel.c  zero_1d_array_kernel_acckernel.c  zero_5d_array_kernel_acckernel.c
openmp/: _kernels.cpp  calc_rms_kernel_kernel.cpp  calculate_cell_volumes_kernel.cpp  calculate_dt_kernel_kernel.cpp  compute_bnd_node_flux_kernel_kernel.cpp  compute_flux_edge_kernel_kernel.cpp  compute_step_factor_kernel_kernel.cpp  compute_stream_loop_kernel.cpp  copy_double_kernel_kernel.cpp  count_bad_vals_kernel.cpp  count_non_zeros_kernel.cpp  dampen_ewt_kernel.cpp  down_kernel_kernel.cpp  down_v2_kernel_kernel.cpp  down_v2_kernel_post_kernel.cpp  down_v2_kernel_pre_kernel.cpp  get_min_dt_kernel_kernel.cpp  identify_differences_kernel.cpp  indirect_rw_kernel_kernel.cpp  initialize_variables_kernel_kernel.cpp  residual_kernel_kernel.cpp  test_negate_kernel_kernel.cpp  test_read_kernel_kernel.cpp  test_write_kernel_kernel.cpp  time_step_kernel_kernel.cpp  unstructured_stream_kernel_kernel.cpp  up_kernel_kernel.cpp  up_post_kernel_kernel.cpp  up_pre_kernel_kernel.cpp  zero_1d_array_kernel_kernel.cpp  zero_5d_array_kernel_kernel.cpp
openmp4/: _omp4kernel_funcs.cpp  _omp4kernels.cpp  calc_rms_kernel_omp4kernel.cpp  calc_rms_kernel_omp4kernel_func.cpp  calculate_cell_volumes_omp4kernel.cpp  calculate_cell_volumes_omp4kernel_func.cpp  calculate_dt_kernel_omp4kernel.cpp  calculate_dt_kernel_omp4kernel_func.cpp  compute_bnd_node_flux_kernel_omp4kernel.cpp  compute_bnd_node_flux_kernel_omp4kernel_func.cpp  compute_flux_edge_kernel_omp4kernel.cpp  compute_flux_edge_kernel_omp4kernel_func.cpp  compute_step_factor_kernel_omp4kernel.cpp  compute_step_factor_kernel_omp4kernel_func.cpp  copy_double_kernel_omp4kernel.cpp  copy_double_kernel_omp4kernel_func.cpp  count_bad_vals_omp4kernel.cpp  count_bad_vals_omp4kernel_func.cpp  count_non_zeros_omp4kernel.cpp  count_non_zeros_omp4kernel_func.cpp  dampen_ewt_omp4kernel.cpp  dampen_ewt_omp4kernel_func.cpp  down_kernel_omp4kernel.cpp  down_kernel_omp4kernel_func.cpp  down_v2_kernel_omp4kernel.cpp  down_v2_kernel_omp4kernel_func.cpp  down_v2_kernel_post_omp4kernel.cpp  down_v2_kernel_post_omp4kernel_func.cpp  down_v2_kernel_pre_omp4kernel.cpp  down_v2_kernel_pre_omp4kernel_func.cpp  get_min_dt_kernel_omp4kernel.cpp  get_min_dt_kernel_omp4kernel_func.cpp  identify_differences_omp4kernel.cpp  identify_differences_omp4kernel_func.cpp  indirect_rw_kernel_omp4kernel.cpp  indirect_rw_kernel_omp4kernel_func.cpp  initialize_variables_kernel_omp4kernel.cpp  initialize_variables_kernel_omp4kernel_func.cpp  residual_kernel_omp4kernel.cpp  residual_kernel_omp4kernel_func.cpp  (+14 more)
pbpic2/: Makefile  cpx_utils.cpp  cpx_utils.h  pbpic2.cpp  pbpic2_lib.cpp  pbpush2.cpp  pbpush2.h  pplib2.cpp  pplib2.h
pbpic_gpu/: Makefile  cpx_utils.cpp  dtimer.cpp  execgpupbpic2.cpp  gpplib2.cpp  gpplib2.h  gpulib2.cu  gpulib2.h  gpupbpic2.cpp  gpupbpush2.cu  gpupbpush2.h  gpupfft2.cu  gpupfft2.h  pbpush2.cpp  pbpush2.h  pplib2.cpp  pplib2.h
run-inputs/: annotated.json  la_cascade.json  m6wing.json  rotor37-1m.json
run-scripts/: aggregate-output-data.py  analyse-output-data.py  data-utils.py  gen_job.py
run-templates/: local.sh  lsf.sh  moab.sh  pbs.sh  run-mgcfd.sh  slurm.sh  submit.sh
seq/: _seqkernels.cpp  calc_rms_kernel_seqkernel.cpp  calculate_cell_volumes_seqkernel.cpp  calculate_dt_kernel_seqkernel.cpp  compute_bnd_node_flux_kernel_seqkernel.cpp  compute_flux_edge_kernel_seqkernel.cpp  compute_step_factor_kernel_seqkernel.cpp  copy_double_kernel_seqkernel.cpp  count_bad_vals_seqkernel.cpp  count_non_zeros_seqkernel.cpp  dampen_ewt_seqkernel.cpp  down_kernel_seqkernel.cpp  down_v2_kernel_post_seqkernel.cpp  down_v2_kernel_pre_seqkernel.cpp  down_v2_kernel_seqkernel.cpp  get_min_dt_kernel_seqkernel.cpp  identify_differences_seqkernel.cpp  indirect_rw_kernel_seqkernel.cpp  initialize_variables_kernel_seqkernel.cpp  residual_kernel_seqkernel.cpp  test_negate_kernel_seqkernel.cpp  (+9 more)
simpic/: Makefile  (+15 more)
(+150 files in other folders)
